# agent-eval

./: .gitignore  README.md  demo_compare_20260519_184126.json  demo_compare_20260519_185259.json  demo_eval.db  pyproject.toml
agent_eval/: __init__.py  cli.py  comparators.py  compare.py  config.py  cost.py  gate.py  golden.py  models.py  probe.py  review.py  storage.py  utils.py
examples/: simple_eval.py  simple_golden.json
tests/: conftest.py  test_cli_display.py  test_comparators.py  test_compare.py  test_config.py  test_cost.py  test_gate.py  test_golden.py  test_probe.py  test_review.py  test_storage.py  test_utils.py
