[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agt-eval"
version = "0.1.0"
description = "CLI toolkit for evaluating LLM agents"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.scripts]
agent-eval = "agent_eval.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["agent_eval"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
